# Agentic_HOB

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  PLAN.md  README.md  SKILLS.md  docker-compose.yml  pyproject.toml
Documents/Marketing_team/Agentic_Marketing/: requirements.txt
alembic/: alembic.ini  env.py
alembic/versions/: 0001_initial_schema.py  002_week2_columns.py  003_orchestration_tables.py  004_onboarding.py
scripts/: run_heartbeat.py  seed_agents.py  seed_apify_tool_config.py  seed_companies.py  seed_tool_registry.py
src/agents/: base_agent.py  hiring_manager.py  registry.py
src/agents/holdco/: bd_agent.py  portfolio_cfo.py
src/agents/specialists/: data_analyst.py  data_scientist.py  engineer.py  growth_hacker.py  optimizer.py  seo_aeo.py
src/core/: audit_log.py  budget_enforcer.py  company_registry.py  goal_ancestry.py  governance.py  heartbeat.py  model_router.py  onboarding.py  orchestrator.py  org_chart.py  ticket_system.py
src/gateway/: app.py  auth.py  intent_router.py  sanitizer.py
src/llm/: anthropic.py  cerebras.py  provider.py
src/shared/: config.py  db.py  exceptions.py  models.py  schemas.py
src/tools/: base_tool.py  custom_adapter.py  tool_registry.py
src/vault/: client.py  sandbox.py
tests/: conftest.py
tests/integration/: test_agent_lifecycle.py  test_brand_isolation.py  test_gateway.py  test_workflow_orchestration.py
tests/unit/: test_budget_enforcer.py  test_heartbeat.py  test_intent_router.py  test_model_router.py  test_onboarding.py  test_sanitizer.py  test_tool_registry.py
(+36 files in other folders)
