[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "brandos"
version = "0.1.0"
description = "BrandOS — AI-agent operating system for D2C house of brands"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Database (async)
    "sqlalchemy[asyncio]>=2.0.30",
    "alembic>=1.13.1",
    "psycopg[async]>=3.1.19",
    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # LLM providers
    "anthropic>=0.28.0",
    "cerebras-cloud-sdk>=1.0.0",
    # HTTP client (tools layer)
    "httpx>=0.27.0",
    # Secret management
    "infisical-python>=2.1.0",
    # Utilities
    "python-multipart>=0.0.9",
    "structlog>=24.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.7",
    "mypy>=1.10.0",
    "types-python-dateutil",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
